# Innovation-Camp-2025

./: README.md  drink-reminder.py  pyproject.toml
examples/sensor-examples/: display.py  rgb.py
hardware/sensor-examples/: cleanup.py  dht11.py  laser.py
hardware/video-introduction/sensor-examples/: adc.py  camera.py  water-level.py
hpc/: README.md
hpc/ic25Tutorial/: run_classification.py  run_comparison.py  setup.sh  submitMe.slurm
ictransport/: README.md  __init__.py  config.toml  ictransport.py
ictransport/examples/: hpc_template.py  init_test.py  laptop_template.py  laptop_template_short.py  pi_template.py
ictransport/src/: ictransport.py
pi/: README.md
pi-init/: README.md  initialise.sh  pip.sh  reload-venv.sh  venv.sh
pi-init/config/: requirements.txt
pi-init/scripts/: apt.sh  bashrc.sh  pi-config.sh  venv.sh
pi/examples/sensor-examples/: README.md  gyro.py  interrupter.py  motion.py  ultrasonic.py
pi/examples/video-introduction/: README.md  drink-reminder.py
pi/initialisation/: README.md  import-test.py  initialise.sh
pi/initialisation/config/: config.txt  requirements.txt
pi/initialisation/scripts/: bashrc.sh  ictransport.sh  pip.sh
pi/pi-init/: README.md  initialise.sh
